deploy/kube/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "taxi-travel-time-prediction"

---
