deploy/kube/grafana-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-app
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-app
  template:
    metadata:
      labels:
        app: grafana-app
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - name: grafana-port
          containerPort: 3000
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: 500M
            cpu: "500m"
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
          readOnly: false
      volumes:
      - name: grafana-storage
        emptyDir: {}
      - name: grafana-datasources
        configMap:
          defaultMode: 420
          name: grafana-datasources

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3000'
spec:
  selector:
    app: grafana-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: grafana-port
    name: grafana-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-app
  namespace: monitoring
  labels:
    name: grafana-app
spec:
  rules:
  - host: grafana.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana-service
            port:
              name: grafana-port
